--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -93,13 +93,13 @@ input[type="submit"]:hover {
     width: 100%;
     height: 400px;
     border: 3px solid pink;
-    overflow-y: scroll;
     max-width: 1000px;
 }
 
 .chat__inner {
+    overflow-y: scroll;
     width: 100%;
-    height: 100%;
+    height: 356px;
 }
 
 .chat__input__container {
